// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots atoms/Button-Color-Radio Eighth 1`] = `
<label
  className="sc-gtssRu edyPoQ"
  type={8}
>
  <input
    checked={false}
    name="color"
    onChange={[Function]}
    type="radio"
    value={8}
  />
</label>
`;

exports[`Storyshots atoms/Button-Color-Radio Fifth 1`] = `
<label
  className="sc-gtssRu kxorpo"
  type={5}
>
  <input
    checked={false}
    name="color"
    onChange={[Function]}
    type="radio"
    value={5}
  />
</label>
`;

exports[`Storyshots atoms/Button-Color-Radio First 1`] = `
<div
  className="sc-hKFyIo hhkMaw"
  type={1}
/>
`;

exports[`Storyshots atoms/Button-Color-Radio Forth 1`] = `
<label
  className="sc-gtssRu cjXYuM"
  type={4}
>
  <input
    checked={false}
    name="color"
    onChange={[Function]}
    type="radio"
    value={4}
  />
</label>
`;

exports[`Storyshots atoms/Button-Color-Radio Second 1`] = `
<label
  className="sc-gtssRu fbpkZu"
  type={2}
>
  <input
    checked={false}
    name="color"
    onChange={[Function]}
    type="radio"
    value={2}
  />
</label>
`;

exports[`Storyshots atoms/Button-Color-Radio Seventh 1`] = `
<label
  className="sc-gtssRu ffSBdm"
  type={7}
>
  <input
    checked={false}
    name="color"
    onChange={[Function]}
    type="radio"
    value={7}
  />
</label>
`;

exports[`Storyshots atoms/Button-Color-Radio Sixth 1`] = `
<label
  className="sc-gtssRu iTBlsR"
  type={6}
>
  <input
    checked={false}
    name="color"
    onChange={[Function]}
    type="radio"
    value={6}
  />
</label>
`;

exports[`Storyshots atoms/Button-Color-Radio Third 1`] = `
<label
  className="sc-gtssRu fyFKPq"
  type={3}
>
  <input
    checked={false}
    name="color"
    onChange={[Function]}
    type="radio"
    value={3}
  />
</label>
`;

exports[`Storyshots atoms/Button-Link Login 1`] = `
<button
  className="sc-iCoHVE fUDlXq"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  ログイン
</button>
`;

exports[`Storyshots atoms/Button-Link Normal 1`] = `
<button
  className="sc-iCoHVE ianfeu"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  TOP
</button>
`;

exports[`Storyshots atoms/Button-Link Partner Login 1`] = `
<button
  className="sc-iCoHVE kUUxie"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  パートナーログイン
</button>
`;

exports[`Storyshots atoms/Button-Link Signup 1`] = `
<button
  className="sc-iCoHVE fURiwC"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  新規会員登録
</button>
`;

exports[`Storyshots atoms/Button-Submit Cancel 1`] = `
<button
  className="sc-jrsJCI kUpbZA"
  onClick={[Function]}
  size="md"
>
  キャンセル
</button>
`;

exports[`Storyshots atoms/Button-Submit Change 1`] = `
<button
  className="sc-jrsJCI kUpbZA"
  onClick={[Function]}
  size="md"
>
  変更
</button>
`;

exports[`Storyshots atoms/Button-Submit Delete 1`] = `
<button
  className="sc-jrsJCI kUpbZA"
  onClick={[Function]}
  size="md"
>
  削除
</button>
`;

exports[`Storyshots atoms/Button-Submit Login 1`] = `
<button
  className="sc-jrsJCI bcEMPs"
  onClick={[Function]}
  size="md"
>
  ログイン
</button>
`;

exports[`Storyshots atoms/Button-Submit Partner 1`] = `
<button
  className="sc-jrsJCI hPPAEU"
  onClick={[Function]}
  size="md"
>
  パートナーログイン
</button>
`;

exports[`Storyshots atoms/Button-Submit Register 1`] = `
<button
  className="sc-jrsJCI kUpbZA"
  onClick={[Function]}
  size="md"
>
  登録
</button>
`;

exports[`Storyshots atoms/Button-Submit Send 1`] = `
<button
  className="sc-jrsJCI kUpbZA"
  onClick={[Function]}
  size="md"
>
  送信
</button>
`;

exports[`Storyshots atoms/Button-Submit Signup 1`] = `
<button
  className="sc-jrsJCI lhfQtQ"
  onClick={[Function]}
  size="md"
>
  新規会員登録
</button>
`;

exports[`Storyshots atoms/Form-Input Email 1`] = `
<input
  autoComplete="on"
  className="sc-jSFkmK drZrfu"
  maxLength={255}
  onChange={[Function]}
  placeholder="メールアドレスを入力してください。"
  type="email"
  value=""
/>
`;

exports[`Storyshots atoms/Form-Input Password 1`] = `
<input
  autoComplete="off"
  className="sc-jSFkmK drZrfu"
  maxLength={20}
  onChange={[Function]}
  placeholder="パスワードを入力してください。"
  type="password"
  value=""
/>
`;

exports[`Storyshots atoms/Form-Input Text 1`] = `
<input
  autoComplete="on"
  className="sc-jSFkmK drZrfu"
  maxLength={255}
  onChange={[Function]}
  placeholder="入力してください"
  type="text"
  value=""
/>
`;

exports[`Storyshots atoms/Link Category Link 1`] = `
<div
  className="sc-bdnylx jTHwZq"
>
  <a
    href="/detail/2020-09-10"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    &lt;&lt; 2020年09月10日の金額情報へ戻る
  </a>
</div>
`;

exports[`Storyshots atoms/Link Detail Link 1`] = `
<div
  className="sc-bdnylx jTHwZq"
>
  <a
    href="/calendar/2020-09-10"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    &lt;&lt; カレンダーへ戻る
  </a>
</div>
`;

exports[`Storyshots atoms/Show-Color Eighth 1`] = `
<p
  className="sc-fujyUd dTaYXe"
  size=""
  type={8}
>
  色を選択してください。
</p>
`;

exports[`Storyshots atoms/Show-Color Fifth 1`] = `
<p
  className="sc-fujyUd TQJyi"
  size=""
  type={5}
>
  色を選択してください。
</p>
`;

exports[`Storyshots atoms/Show-Color First 1`] = `
<p
  className="sc-fujyUd eDHyvu"
  size=""
  type={1}
>
  色を選択してください。
</p>
`;

exports[`Storyshots atoms/Show-Color Forth 1`] = `
<p
  className="sc-fujyUd SFMoG"
  size=""
  type={4}
>
  色を選択してください。
</p>
`;

exports[`Storyshots atoms/Show-Color None 1`] = `
<p
  className="sc-fujyUd irIeBH"
  size=""
  type={0}
>
  色を選択してください。
</p>
`;

exports[`Storyshots atoms/Show-Color Second 1`] = `
<p
  className="sc-fujyUd jykZii"
  size=""
  type={2}
>
  色を選択してください。
</p>
`;

exports[`Storyshots atoms/Show-Color Seventh 1`] = `
<p
  className="sc-fujyUd EOZJm"
  size=""
  type={7}
>
  色を選択してください。
</p>
`;

exports[`Storyshots atoms/Show-Color Sixth 1`] = `
<p
  className="sc-fujyUd cyCKXK"
  size=""
  type={6}
>
  色を選択してください。
</p>
`;

exports[`Storyshots atoms/Show-Color Third 1`] = `
<p
  className="sc-fujyUd jDmAiy"
  size=""
  type={3}
>
  色を選択してください。
</p>
`;

exports[`Storyshots atoms/Title Calendar 1`] = `
<div
  className="sc-eCApGN kWtOrq"
>
  <h3>
    カレンダー
  </h3>
</div>
`;

exports[`Storyshots atoms/Title Graph 1`] = `
<div
  className="sc-eCApGN kWtOrq"
>
  <h3>
    グラフ
  </h3>
</div>
`;

exports[`Storyshots molcules/LinkButtonField Login 1`] = `
<div
  className="sc-iqAbSa jqNyoC"
>
  <p>
    メインでのご利用の方はこちら
  </p>
  <button
    className="sc-iCoHVE fUDlXq"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    ログイン
  </button>
</div>
`;
